Added fixedrate code that will disable the rate control algorithm - default rate is 11000. To change the rate you should use 'sysctl dev.wifi0.fixedrate=5500' or cat to '/proc/sys/dev/wifi0/fixedrate' for example.

--- a/madwifi/madwifi-0.9.4/Makefile
+++ b/madwifi/madwifi-0.9.4/Makefile
@@ -54,6 +54,14 @@ obj-y := ath/ ath_hal/ ath_rate/ net80211/
 
 all: modules tools
 
+FIXEDRATE: configcheck svnversion.h
+ifdef LINUX24
+	for i in $(obj-y); do \
+		$(MAKE) -C $$i FRFLAG=1 || exit 1; \
+	done
+else
+	$(MAKE) -C $(KERNELPATH) FRFLAG=1 SUBDIRS=$(shell pwd) modules
+endif
 modules: configcheck svnversion.h
 ifdef LINUX24
 	for i in $(obj-y); do \
