Extra version changed to just soekris

--- a/kernels/trunk/kernels/config/ltsp/2.6.25-rc8/.config
+++ b/kernels/trunk/kernels/config/ltsp/2.6.25-rc8/.config
@@ -53,7 +53,7 @@ CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="-soekris-4801-madwifi-rate.control"
+CONFIG_LOCALVERSION="-soekris-4801"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
