Added QUEUE_SIZE option to ensure queue size is respected. Also cleared some FIXED_RATE problematic code.

--- a/kernels/trunk/kernels/madwifi/madwifi-0.9.4/ath/Makefile
+++ b/kernels/trunk/kernels/madwifi/madwifi-0.9.4/ath/Makefile
@@ -63,6 +63,9 @@ INCS += -I$(TOP) -I$(ATH_HAL) -I$(HAL) -I$(WLAN)
 
 EXTRA_CFLAGS+= $(INCS) $(COPTS) -DOPT_AH_H=\"$(HAL)/public/$(TARGET).opt_ah.h\"
 
+ifeq (${QUEUE_SIZE},1)
+EXTRA_CFLAGS+= -DQUEUE_SIZE
+endif
 ifeq (${FIXED_RATE},1)
 EXTRA_CFLAGS+= -DFIXED_RATE
 endif
